<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/dark_green"
    tools:context=".explore.ExploreActivity">

    <TextView
        android:id="@+id/textViewBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/pixeloid_sans"
        android:gravity="start|center_vertical"
        android:text="@string/back_btn_arrow_label"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/pixeloid_sans"
        android:gravity="start|center_vertical"
        android:text="@string/recommendations_label"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textViewLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:ellipsize="end"
        android:fontFamily="@font/pixeloid_sans"
        android:gravity="start|center_vertical"
        android:maxLines="3"
        android:text="@string/location_label"
        android:textColor="@color/white"
        android:textSize="14sp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardResults"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:layout_weight="1"
        app:cardBackgroundColor="@color/light_green"
        app:cardCornerRadius="15dp"
        app:cardElevation="2dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/pixeloid_sans"
                    android:gravity="start|center_vertical"
                    android:text="@string/top_results_label"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textViewRefresh"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/pixeloid_sans"
                    android:gravity="center_vertical|end"
                    android:text="@string/refresh_label"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>